# Catbuffer-Generator-Cpp

./: .gitignore  README.md  YamlChangeProposal.md  YamlCurrent.md
cpp_build_files/: CMakeLists.txt  CMakeLists_with_cmd.txt
cpp_source/: ICatbuffer.h  ICatbufferPrint.h  IPrettyPrinter.h  RawBuffer.cpp  RawBuffer.h  cmd.cpp
end-to-end-tests/: CMakeLists.txt
end-to-end-tests/src/: createCppTestVector.py  main.cpp  payloads.h
generator/: AstToNativeConverter.py  CppClassDeclarationGenerator.py  CppClassDefinitionGenerator.py  CppConvertersGenerator.py  CppDeserializationGenerator.py  CppEnumeratorToClassGenerator.py  CppFieldGenerator.py  CppPrintOutputGenerator.py  CppSerializationGenerator.py  CppSizeGenerator.py  CppTypesGenerator.py  YamlDependencyChecker.py  YamlFieldChecker.py  __main__.py
test_vectors/: symbol_transactions.yml
unit_tests/: TestYamlDependencyErrorDetection.py  TestYamlFieldErrorDetection.py
yaml_test_inputs/: nem-all-transactions.yaml  symbol-all-transactions-new-format.yaml  symbol-all-transactions.yaml
